Add Feature Engineering

--- a/SC62612_Arvano_Salma_Fatimatus_Zahra_Data_Preprocessing.ipynb
+++ b/SC62612_Arvano_Salma_Fatimatus_Zahra_Data_Preprocessing.ipynb
@@ -5872,7 +5872,57 @@
         "id": "e0sQMoASfZZV"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# 1. BMI (Indeks Massa Tubuh)\n",
+        "heart_data['bmi'] = heart_data['chol'] / ((heart_data['age'] / 100) ** 2)\n",
+        "\n",
+        "# 2. Kategori Tekanan Darah\n",
+        "threshold_low = 94\n",
+        "threshold_high = 200\n",
+        "heart_data['kategori_td'] = pd.cut(heart_data['trestbps'], bins=[0, threshold_low, threshold_high, np.inf], labels=['rendah', 'normal', 'tinggi'], right=False)\n",
+        "\n",
+        "# 3. Rasio Kolesterol\n",
+        "heart_data['rasio_kolesterol'] = heart_data['chol'] / heart_data['thalach']\n",
+        "\n",
+        "# 4. Kategori Usia\n",
+        "threshold_muda = 29\n",
+        "threshold_tua = 77\n",
+        "heart_data['kategori_usia'] = pd.cut(heart_data['age'], bins=[0, threshold_muda, threshold_tua, np.inf], labels=['muda', 'dewasa', 'lanjut usia'], right=False)\n",
+        "\n",
+        "# 5. Angina Pektoris\n",
+        "angina_map = {1: 'angina tipikal', 2: 'angina atipikal', 3: 'nyeri non-anginal', 4: 'asimtomatik'}\n",
+        "heart_data['angina_pektoris'] = heart_data['cp'].map(angina_map) + ' ' + heart_data['exang'].map({1: 'ada', 0: 'tidak ada'})\n",
+        "\n",
+        "# 6. Rasio Denyut Jantung\n",
+        "heart_data['rasio_denyut_jantung'] = heart_data['thalach'] / heart_data['restecg']\n",
+        "\n",
+        "# 7. Kategori Depresi ST\n",
+        "threshold_low = 0\n",
+        "threshold_med = 0.8\n",
+        "threshold_high = 6\n",
+        "heart_data['kategori_depresi_st'] = pd.cut(heart_data['oldpeak'], bins=[-np.inf, threshold_low, threshold_med, threshold_high, np.inf], labels=['tidak ada', 'rendah', 'sedang', 'tinggi'], right=False)\n",
+        "\n",
+        "# 8. Kombinasi EKG dan Kemiringan ST\n",
+        "ekg_map = {0: 'normal', 1: 'abnormalitas gelombang ST-T', 2: 'hipertrofi ventrikel kiri'}\n",
+        "slope_map = {1: 'menanjak', 2: 'datar', 3: 'menurun'}\n",
+        "heart_data['kombinasi_ekg_slope'] = heart_data['restecg'].map(ekg_map) + ' ' + heart_data['slope'].map(slope_map)\n",
+        "\n",
+        "# 9. Jumlah Kelainan\n",
+        "heart_data['jumlah_kelainan'] = heart_data[['fbs', 'restecg', 'exang', 'slope', 'ca', 'thal']].sum(axis=1)\n",
+        "\n",
+        "# 10. Kategori Denyut Jantung Maksimum\n",
+        "threshold_low = 71\n",
+        "threshold_high = 202\n",
+        "heart_data['kategori_denyut_jantung_max'] = pd.cut(heart_data['thalach'], bins=[0, threshold_low, threshold_high, np.inf], labels=['rendah', 'normal', 'tinggi'], right=False)\n",
+        "\n",
+        "# 11. Kombinasi Nyeri Dada dan EKG Saat Istirahat\n",
+        "chest_pain_map = {1: 'angina tipikal', 2: 'angina atipikal', 3: 'nyeri non-anginal', 4: 'asimtomatik'}\n",
+        "rest_ecg_map = {0: 'normal', 1: 'abnormalitas gelombang ST-T', 2: 'hipertrofi ventrikel kiri'}\n",
+        "heart_data['kombinasi_nyeri_dada_rest_ecg'] = heart_data['cp'].map(chest_pain_map) + ' ' + heart_data['restecg'].map(rest_ecg_map)\n",
+        "\n",
+        "# Menampilkan DataFrame yang telah dimodifikasi\n",
+        "print(heart_data.tail())"
+      ]
     }
   ],
   "metadata": {
